// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`interactive-transactions (provider=cockroachdb) batching raw rollback 1`] = `

Invalid \`prisma.$executeRaw()\` invocation:


Raw query failed. Code: \`23505\`. Message: \`Key (id)=('1') already exists.\`
`;

exports[`interactive-transactions (provider=cockroachdb) batching rollback 1`] = `

Invalid \`prisma.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX     email: 'user_1@website.com',
  XX   },
  XX }),
→ XX prisma.user.create(
Unique constraint failed on the fields: (\`email\`)
`;

exports[`interactive-transactions (provider=cockroachdb) batching rollback within callback 1`] = `

Invalid \`tx.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX   }),
  XX ])
  XX 
→ XX await tx.user.create(
Unique constraint failed on the fields: (\`email\`)
`;

exports[`interactive-transactions (provider=cockroachdb) rollback query 1`] = `

Invalid \`prisma.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX   },
  XX })
  XX 
→ XX await prisma.user.create(
Unique constraint failed on the fields: (\`email\`)
`;

exports[`interactive-transactions (provider=mongodb) batching rollback 1`] = `

Invalid \`prisma.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX     email: 'user_1@website.com',
  XX   },
  XX }),
→ XX prisma.user.create(
Unique constraint failed on the constraint: \`User_email_key\`
`;

exports[`interactive-transactions (provider=mongodb) batching rollback within callback 1`] = `

Invalid \`tx.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX   }),
  XX ])
  XX 
→ XX await tx.user.create(
Unique constraint failed on the constraint: \`User_email_key\`
`;

exports[`interactive-transactions (provider=mongodb) rollback query 1`] = `

Invalid \`prisma.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX   },
  XX })
  XX 
→ XX await prisma.user.create(
Unique constraint failed on the constraint: \`User_email_key\`
`;

exports[`interactive-transactions (provider=mysql) batching raw rollback 1`] = `

Invalid \`prisma.$executeRaw()\` invocation:


Raw query failed. Code: \`1062\`. Message: \`Duplicate entry '1' for key 'user.PRIMARY'\`
`;

exports[`interactive-transactions (provider=mysql) batching rollback 1`] = `

Invalid \`prisma.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX     email: 'user_1@website.com',
  XX   },
  XX }),
→ XX prisma.user.create(
Unique constraint failed on the constraint: \`User_email_key\`
`;

exports[`interactive-transactions (provider=mysql) batching rollback within callback 1`] = `

Invalid \`tx.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX   }),
  XX ])
  XX 
→ XX await tx.user.create(
Unique constraint failed on the constraint: \`User_email_key\`
`;

exports[`interactive-transactions (provider=mysql) rollback query 1`] = `

Invalid \`prisma.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX   },
  XX })
  XX 
→ XX await prisma.user.create(
Unique constraint failed on the constraint: \`User_email_key\`
`;

exports[`interactive-transactions (provider=mysql, js_planetscale) batching raw rollback 1`] = `target: test-0000-00000000.0.primary: vttablet: rpc error: code = AlreadyExists desc = Duplicate entry '1' for key 'User.PRIMARY' (errno 1062) (sqlstate 23000) (CallerID: userData1): Sql: "insert into \`User\`(id, email) values (:vtg1 /* VARCHAR */, :vtg2 /* VARCHAR */)", BindVars: {vtg1: "type:VARCHAR value:\\"1\\""vtg2: "type:VARCHAR value:\\"user_1@website.com\\""} (errno 1062) (sqlstate 23000) during query: INSERT INTO User (id, email) VALUES ('1', 'user_1@website.com')`;

exports[`interactive-transactions (provider=mysql, js_planetscale) batching rollback 1`] = `target: test-0000-00000000.0.primary: vttablet: rpc error: code = AlreadyExists desc = Duplicate entry 'user_1@website.com' for key 'User.User_email_key' (errno 1062) (sqlstate 23000) (CallerID: userData1): Sql: "insert into \`User\`(id, email) values (:vtg1 /* VARCHAR */, :vtg2 /* VARCHAR */)", BindVars: {vtg1: "type:VARCHAR value:\\"a85d5d75a3a886cb61eb3a0e\\""vtg2: "type:VARCHAR value:\\"user_1@website.com\\""} (errno 1062) (sqlstate 23000) during query: INSERT INTO \`test-0000-00000000\`.\`User\` (\`id\`,\`email\`) VALUES ('a85d5d75a3a886cb61eb3a0e','user_1@website.com')`;

exports[`interactive-transactions (provider=mysql, js_planetscale) batching rollback within callback 1`] = `target: test-0000-00000000.0.primary: vttablet: rpc error: code = AlreadyExists desc = Duplicate entry 'user_1@website.com' for key 'User.User_email_key' (errno 1062) (sqlstate 23000) (CallerID: userData1): Sql: "insert into \`User\`(id, email) values (:vtg1 /* VARCHAR */, :vtg2 /* VARCHAR */)", BindVars: {vtg1: "type:VARCHAR value:\\"a7fe5dac91ab6b0f529430c5\\""vtg2: "type:VARCHAR value:\\"user_1@website.com\\""} (errno 1062) (sqlstate 23000) during query: INSERT INTO \`test-0000-00000000\`.\`User\` (\`id\`,\`email\`) VALUES ('a7fe5dac91ab6b0f529430c5','user_1@website.com')`;

exports[`interactive-transactions (provider=mysql, js_planetscale) rollback query 1`] = `target: test-0000-00000000.0.primary: vttablet: rpc error: code = AlreadyExists desc = Duplicate entry 'user_1@website.com' for key 'User.User_email_key' (errno 1062) (sqlstate 23000) (CallerID: userData1): Sql: "insert into \`User\`(id, email) values (:vtg1 /* VARCHAR */, :vtg2 /* VARCHAR */)", BindVars: {vtg1: "type:VARCHAR value:\\"a85d5d75a3a886cb61eb3a0e\\""vtg2: "type:VARCHAR value:\\"user_1@website.com\\""} (errno 1062) (sqlstate 23000) during query: INSERT INTO \`test-0000-00000000\`.\`User\` (\`id\`,\`email\`) VALUES ('a85d5d75a3a886cb61eb3a0e','user_1@website.com')`;

exports[`interactive-transactions (provider=postgresql) batching raw rollback 1`] = `

Invalid \`prisma.$executeRaw()\` invocation:


Raw query failed. Code: \`23505\`. Message: \`Key (id)=(1) already exists.\`
`;

exports[`interactive-transactions (provider=postgresql) batching rollback 1`] = `

Invalid \`prisma.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX     email: 'user_1@website.com',
  XX   },
  XX }),
→ XX prisma.user.create(
Unique constraint failed on the fields: (\`email\`)
`;

exports[`interactive-transactions (provider=postgresql) batching rollback within callback 1`] = `

Invalid \`tx.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX   }),
  XX ])
  XX 
→ XX await tx.user.create(
Unique constraint failed on the fields: (\`email\`)
`;

exports[`interactive-transactions (provider=postgresql) rollback query 1`] = `

Invalid \`prisma.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX   },
  XX })
  XX 
→ XX await prisma.user.create(
Unique constraint failed on the fields: (\`email\`)
`;

exports[`interactive-transactions (provider=postgresql, js_neon) batching raw rollback 1`] = `

Invalid \`prisma.$executeRaw()\` invocation:


Raw query failed. Code: \`23505\`. Message: \`Key (id)=(1) already exists.\`
`;

exports[`interactive-transactions (provider=postgresql, js_neon) batching rollback 1`] = `

Invalid \`prisma.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX     email: 'user_1@website.com',
  XX   },
  XX }),
→ XX prisma.user.create(
Unique constraint failed on the fields: (\`email\`)
`;

exports[`interactive-transactions (provider=postgresql, js_neon) batching rollback within callback 1`] = `

Invalid \`tx.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX   }),
  XX ])
  XX 
→ XX await tx.user.create(
Unique constraint failed on the fields: (\`email\`)
`;

exports[`interactive-transactions (provider=postgresql, js_neon) rollback query 1`] = `

Invalid \`prisma.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX   },
  XX })
  XX 
→ XX await prisma.user.create(
Unique constraint failed on the fields: (\`email\`)
`;

exports[`interactive-transactions (provider=postgresql, js_pg) batching raw rollback 1`] = `

Invalid \`prisma.$executeRaw()\` invocation:


duplicate key value violates unique constraint "User_pkey"
`;

exports[`interactive-transactions (provider=postgresql, js_pg) batching rollback 1`] = `

Invalid \`prisma.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX     providerFlavor !== ProviderFlavors.JS_LIBSQL,
  XX )('batching rollback', async () => {
  XX   const result = prisma.$transaction([
→ XX     prisma.user.create(
duplicate key value violates unique constraint "User_email_key"
`;

exports[`interactive-transactions (provider=postgresql, js_pg) batching rollback within callback 1`] = `

Invalid \`tx.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX   }),
  XX ])
  XX 
→ XX await tx.user.create(
duplicate key value violates unique constraint "User_email_key"
`;

exports[`interactive-transactions (provider=postgresql, js_pg) rollback query 1`] = `

Invalid \`prisma.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX   },
  XX })
  XX 
→ XX await prisma.user.create(
duplicate key value violates unique constraint "User_email_key"
`;

exports[`interactive-transactions (provider=sqlite) batching raw rollback 1`] = `

Invalid \`prisma.$executeRaw()\` invocation:


Raw query failed. Code: \`2067\`. Message: \`UNIQUE constraint failed: User.email\`
`;

exports[`interactive-transactions (provider=sqlite) batching rollback 1`] = `

Invalid \`prisma.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX     email: 'user_1@website.com',
  XX   },
  XX }),
→ XX prisma.user.create(
Unique constraint failed on the fields: (\`email\`)
`;

exports[`interactive-transactions (provider=sqlite) batching rollback within callback 1`] = `

Invalid \`tx.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX   }),
  XX ])
  XX 
→ XX await tx.user.create(
Unique constraint failed on the fields: (\`email\`)
`;

exports[`interactive-transactions (provider=sqlite) rollback query 1`] = `

Invalid \`prisma.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX   },
  XX })
  XX 
→ XX await prisma.user.create(
Unique constraint failed on the fields: (\`email\`)
`;

exports[`interactive-transactions (provider=sqlite, js_libsql) batching raw rollback 1`] = `

Invalid \`prisma.$executeRaw()\` invocation:


SQLITE_CONSTRAINT_UNIQUE: UNIQUE constraint failed: User.email
`;

exports[`interactive-transactions (provider=sqlserver) batching raw rollback 1`] = `

Invalid \`prisma.$executeRaw()\` invocation:


Raw query failed. Code: \`2627\`. Message: \`Violation of PRIMARY KEY constraint 'User_pkey'. Cannot insert duplicate key in object 'dbo.User'. The duplicate key value is (1).\`
`;

exports[`interactive-transactions (provider=sqlserver) batching rollback 1`] = `

Invalid \`prisma.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX     email: 'user_1@website.com',
  XX   },
  XX }),
→ XX prisma.user.create(
Unique constraint failed on the constraint: \`dbo.User\`
`;

exports[`interactive-transactions (provider=sqlserver) batching rollback within callback 1`] = `

Invalid \`tx.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX   }),
  XX ])
  XX 
→ XX await tx.user.create(
Unique constraint failed on the constraint: \`dbo.User\`
`;

exports[`interactive-transactions (provider=sqlserver) rollback query 1`] = `

Invalid \`prisma.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX   },
  XX })
  XX 
→ XX await prisma.user.create(
Unique constraint failed on the constraint: \`dbo.User\`
`;
